move inventory bar to the right

--- a/src/client/less/Player.less
+++ b/src/client/less/Player.less
@@ -27,5 +27,14 @@
 
     .grabbing {
         bottom: 65px;
+
+        &.rightAligned {
+            right: 65px;
+            &::v-deep {
+                .label {
+                    display: none;
+                }
+            }
+        }
     }
 }
