--- a/src/client/less/Inventory.less
+++ b/src/client/less/Inventory.less
@@ -14,6 +14,19 @@
     height: calc(var(--slot-height, 50px) + 2px);
     white-space: nowrap;
 
+    &.rightAligned {
+        flex-wrap: wrap;
+        width: calc(var(--slot-height, 50px) + 2px);
+        height: fit-content;
+        max-height: calc(100vh - 50px);
+        overflow-x: hidden;
+        overflow-y: auto;
+        top: 50%;
+        right: 10px;
+        left: auto;
+        transform: translateY(-50%);
+    }
+
     &::-webkit-scrollbar {
         width: 0.15em;
         height: 0.15em;
