fix remove and restore of scenes and items in lesson editor

--- a/src/client/less/LessonEditor.less
+++ b/src/client/less/LessonEditor.less
@@ -125,7 +125,7 @@
                     font-size: 20px;
                     font-weight: bold;
                     cursor: pointer;
-                    pointer-events: all;
+                    pointer-events: all !important;
 
                     &:hover {
                         color: var(--primary-color, @primaryColor);
