--- a/src/client/less/LessonEditor.less
+++ b/src/client/less/LessonEditor.less
@@ -8,7 +8,8 @@
         overflow: auto;
         overflow-x: hidden;
 
-        h3 {
+        h3,
+        &::v-deep h3 {
             font-size: 16px;
             display: block;
             padding-left: 10px;
