make overwrite subobjects collabsable

--- a/src/client/less/LessonOverwritesItem.less
+++ b/src/client/less/LessonOverwritesItem.less
@@ -46,4 +46,15 @@
             grid-area: value;
         }
     }
+
+    .moreObjects {
+        background-color: @primaryColor;
+        cursor: pointer;
+        padding: 5px;
+        text-align: center;
+
+        &:hover {
+            background-color: @infoColor;
+        }
+    }
 }
