add variable documentation to knowledge editor

--- a/src/client/less/VariableProgramming.less
+++ b/src/client/less/VariableProgramming.less
@@ -1,6 +1,6 @@
 @import (less) "variables.less";
 
-.speechBubbleProgramming {
+.variableProgramming {
     .varName,
     .value {
         font-weight: bold;
