--- a/src/client/less/KnowledgeEditor.less
+++ b/src/client/less/KnowledgeEditor.less
@@ -1,3 +1,5 @@
+@import (less) "variables";
+
 .knowledgeEditor {
     height: 100%;
 
@@ -5,5 +7,13 @@
         padding: 0 10px;
         height: calc(100% - 50px);
         overflow-y: auto;
+    }
+
+    .documentationButton {
+        cursor: pointer;
+
+        &:hover {
+            color: @primaryColor;
+        }
     }
 }
