--- a/src/client/less/animations.less
+++ b/src/client/less/animations.less
@@ -21,3 +21,12 @@
         transform: rotate(360deg);
     }
 }
+
+@keyframes lds-ring {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
