--- a/src/client/less/Player.less
+++ b/src/client/less/Player.less
@@ -2,7 +2,7 @@
 @import (less) "animations.less";
 
 .player {
-    height: 100%;
+    height: 100vh;
 
     .graphicViewer {
         height: calc(100vh - 50px);
