respect CSP and fix sizing of none sized svg

--- a/src/client/less/UploadHint.less
+++ b/src/client/less/UploadHint.less
@@ -14,6 +14,11 @@
     pointer-events: none;
     display: none;
 
+    .getSizeImage {
+        opacity: 0;
+        pointer-events: none;
+    }
+
     .wrapper {
         position: absolute;
         left: 50%;
