--- a/src/client/less/GraphicViewer.less
+++ b/src/client/less/GraphicViewer.less
@@ -4,6 +4,13 @@
     overflow: hidden;
     position: relative;
 
+    .backgroundImage, .actionObjectBackground {
+        opacity: 0;
+        pointer-events: none;
+        z-index: -10;
+        position: absolute;
+    }
+
     canvas {
         background-color: transparent;
 
