--- a/src/client/less/EditorHead.less
+++ b/src/client/less/EditorHead.less
@@ -3,7 +3,7 @@
 header {
     display: grid;
     grid-template-columns: 250px 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    //grid-template-rows: 1fr 1fr 1fr;
     grid-template-areas:
         "headline ."
         "headline buttons"
