--- a/src/client/less/LessonEditor.less
+++ b/src/client/less/LessonEditor.less
@@ -238,6 +238,12 @@
                 display: flex;
                 align-items: stretch;
 
+                &.placeholder {
+                    .action {
+                        pointer-events: none;
+                    }
+                }
+
                 > div {
                     border: 1px solid @black;
                 }
