some validation fixes and mark invalid fields

--- a/src/client/less/GraphicEditor.less
+++ b/src/client/less/GraphicEditor.less
@@ -1,4 +1,4 @@
 .graphicEditor {
-    background-image: url("~client/assets/transparentBackgroundIndicator.png");
+    background-image: url("~client/assets/transparent-background-pattern.svg");
     height: 100%;
 }
