--- a/src/client/less/LessonEditor.less
+++ b/src/client/less/LessonEditor.less
@@ -98,7 +98,7 @@
             .avatar {
                 display: inline-block;
                 position: relative;
-                background-image: url("~client/assets/transparentBackgroundIndicator.png");
+                background-image: url("~client/assets/transparent-background-pattern.svg");
                 cursor: grab;
                 width: calc(20% - 10px);
                 min-width: 150px;
