--- a/src/client/less/LessonsListItem.less
+++ b/src/client/less/LessonsListItem.less
@@ -59,7 +59,7 @@
             .scene {
                 position: relative;
                 box-sizing: border-box;
-                background-image: url("~client/assets/transparentBackgroundIndicator.png");
+                background-image: url("~client/assets/transparent-background-pattern.svg");
                 margin: 5px;
 
                 &::before {
