try to fix some errors

--- a/src/client/less/GraphicViewer.less
+++ b/src/client/less/GraphicViewer.less
@@ -5,10 +5,11 @@
     position: relative;
 
     .backgroundImage, .actionObjectBackground {
-        opacity: 0;
-        pointer-events: none;
-        z-index: -10;
-        position: absolute;
+        // opacity: 0;
+        // pointer-events: none;
+        // z-index: -10;
+        // position: absolute;
+        display: none;
     }
 
     canvas {
